create about pages

--- a/webtune/about.html
+++ b/webtune/about.html
@@ -379,7 +379,7 @@
       </div>
 
       <div class="newTeamMission__photo">
-         <img src="" alt="">
+         <img src="./img/teamMission.png" alt="">
       </div>
 
       <div class="newTeamMission__wrapper">
@@ -519,7 +519,10 @@
       </div>
       <div class="ourTeam__heading heading2">
          Люди, які роблять
-         неможливі речі - реальними
+         неможливі речі - 
+         <span>
+            реальними
+         </span>
       </div>
 
       <div class="ourTeam__slider">
@@ -561,10 +564,43 @@
                <img src="./img/inna.jpg" alt="">
             </div>
          </div>
+
+         <div class="ourTeam__item">
+            <div class="ourTeam__name">
+               Роман
+            </div>
+            <div class="ourTeam__position">
+               CEO / PPC Specialist
+            </div>
+
+            <div class="ourTeam__photo">
+               <img src="./img/roma.jpg" alt="">
+            </div>
+         </div>
+
+         <div class="ourTeam__item">
+            <div class="ourTeam__name">
+               Роман
+            </div>
+            <div class="ourTeam__position">
+               SEO Specialist
+            </div>
+
+            <div class="ourTeam__photo">
+               <img src="./img/romaseo.jpg" alt="">
+            </div>
+         </div>
       </div>
    </div>
 </section>
       <section class="newAtWork newSection">
+   <div class="verticalLines">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+   </div>
+
    <div class="newAtWork__content content">
       <div class="newAtWork__row">
          <div class="newAtWork__subHeading subHeading">
@@ -608,19 +644,19 @@
 
       <div class="newAtWork__row">
          <div class="newAtWork__photo">
-            <img src="" alt="">
+            <img src="./img/atWork1.png" alt="">
          </div>
 
          <div class="newAtWork__photo">
-            <img src="" alt="">
+            <img src="./img/atWork2.png" alt="">
          </div>
 
          <div class="newAtWork__photo">
-            <img src="" alt="">
+            <img src="./img/atWork3.png" alt="">
          </div>
 
          <div class="newAtWork__photo">
-            <img src="" alt="">
+            <img src="./img/atWork4.png" alt="">
          </div>
       </div>
    </div>
@@ -870,7 +906,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together.
       </div>
 
       <div class="contactSection__paragraph">
@@ -893,7 +929,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message."></textarea>
             </div>
 
             <div class="newForm-control">
