--- a/webtune/blog.html
+++ b/webtune/blog.html
@@ -616,7 +616,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together.
       </div>
 
       <div class="contactSection__paragraph">
@@ -639,7 +639,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message."></textarea>
             </div>
 
             <div class="newForm-control">
