--- a/webtune/single-post.html
+++ b/webtune/single-post.html
@@ -704,7 +704,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together.
       </div>
 
       <div class="contactSection__paragraph">
@@ -727,7 +727,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message."></textarea>
             </div>
 
             <div class="newForm-control">
