--- a/webtune/single-post.html
+++ b/webtune/single-post.html
@@ -35,7 +35,7 @@
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./contacts.htlm">Contacts</a>
+               <a href="./contacts.html">Contacts</a>
             </li>
 
             <li class="nav__item menu-item">
@@ -355,6 +355,13 @@
             </li>
          </ul>
       </div>
+   </div>
+
+   <div class="newHead__contactBtn">
+      <a href="#">
+         <span>CLICK HERE to Contact Us</span>
+         <span class="icon-oneClick"></span>
+      </a>
    </div>
 </section>
       <section class="newSection newBlog newOnePost">
@@ -704,7 +711,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together.
+         Let's do it together..
       </div>
 
       <div class="contactSection__paragraph">
@@ -727,7 +734,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message."></textarea>
+               <textarea rows="1" placeholder="Type your message.."></textarea>
             </div>
 
             <div class="newForm-control">
