--- a/webtune/single-service.html
+++ b/webtune/single-service.html
@@ -37,7 +37,7 @@
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./contacts.htlm">Contacts</a>
+               <a href="./contacts.html">Contacts</a>
             </li>
 
             <li class="nav__item menu-item">
