--- a/webtune/single-service.html
+++ b/webtune/single-service.html
@@ -1243,7 +1243,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together.
       </div>
 
       <div class="contactSection__paragraph">
@@ -1266,7 +1266,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message."></textarea>
             </div>
 
             <div class="newForm-control">
