created mobile portfolio

--- a/webtune/blog.html
+++ b/webtune/blog.html
@@ -296,7 +296,7 @@
    </div>
 
    <div class="newHead__background">
-      <img src="././img/headBackground.png" alt="">
+      <img src="./img/headBackground.png" alt="">
    </div>
 
    <div class="newHead__content content">
@@ -614,7 +614,7 @@
 </section>
       <section class="contactSection section">
    <div class="contactSection__background">
-      <img src="././img/contactSectionBg.png" alt="background image">
+      <img src="./img/contactSectionBg.png" alt="background image">
    </div>
 
    <div class="contactSection__content content">
@@ -623,7 +623,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together.
+         Let's do it together..
       </div>
 
       <div class="contactSection__paragraph">
@@ -646,7 +646,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message."></textarea>
+               <textarea rows="1" placeholder="Type your message.."></textarea>
             </div>
 
             <div class="newForm-control">
