--- a/webtune/single-post.html
+++ b/webtune/single-post.html
@@ -296,7 +296,7 @@
    </div>
 
    <div class="newHead__background">
-      <img src="././img/headBackground.png" alt="">
+      <img src="./img/headBackground.png" alt="">
    </div>
 
    <div class="newHead__content content">
@@ -438,7 +438,7 @@
          </h2>
    
          <p>
-            <img src="././img/onePost.png" alt="post image">
+            <img src="./img/onePost.png" alt="post image">
          </p>
    
          <p>
@@ -477,7 +477,7 @@
          </p>
    
          <p>
-            <img src="././img/onePost2.png" alt="post image">
+            <img src="./img/onePost2.png" alt="post image">
          </p>
    
          <p>
@@ -572,7 +572,7 @@
             <div class="newPostCarousel__slider">
                <div class="newPostCarousel__item">
                   <div class="newPostCarousel__photo">
-                     <img src="././img/postCarousel1.png" alt="">
+                     <img src="./img/postCarousel1.png" alt="">
                   </div>
    
                   <a href="#" class="newPostCarousel__info">
@@ -593,7 +593,7 @@
 
                <div class="newPostCarousel__item">
                   <div class="newPostCarousel__photo">
-                     <img src="././img/postCarousel2.png" alt="">
+                     <img src="./img/postCarousel2.png" alt="">
                   </div>
    
                   <a href="#" class="newPostCarousel__info">
@@ -614,7 +614,7 @@
 
                <div class="newPostCarousel__item">
                   <div class="newPostCarousel__photo">
-                     <img src="././img/postCarousel3.png" alt="">
+                     <img src="./img/postCarousel3.png" alt="">
                   </div>
    
                   <a href="#" class="newPostCarousel__info">
@@ -635,7 +635,7 @@
 
                <div class="newPostCarousel__item">
                   <div class="newPostCarousel__photo">
-                     <img src="././img/postCarousel1.png" alt="">
+                     <img src="./img/postCarousel1.png" alt="">
                   </div>
    
                   <a href="#" class="newPostCarousel__info">
@@ -656,7 +656,7 @@
 
                <div class="newPostCarousel__item">
                   <div class="newPostCarousel__photo">
-                     <img src="././img/postCarousel2.png" alt="">
+                     <img src="./img/postCarousel2.png" alt="">
                   </div>
    
                   <a href="#" class="newPostCarousel__info">
@@ -677,7 +677,7 @@
 
                <div class="newPostCarousel__item">
                   <div class="newPostCarousel__photo">
-                     <img src="././img/postCarousel3.png" alt="">
+                     <img src="./img/postCarousel3.png" alt="">
                   </div>
    
                   <a href="#" class="newPostCarousel__info">
@@ -702,7 +702,7 @@
 </section>
       <section class="contactSection section">
    <div class="contactSection__background">
-      <img src="././img/contactSectionBg.png" alt="background image">
+      <img src="./img/contactSectionBg.png" alt="background image">
    </div>
 
    <div class="contactSection__content content">
@@ -711,7 +711,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together.
+         Let's do it together..
       </div>
 
       <div class="contactSection__paragraph">
@@ -734,7 +734,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message."></textarea>
+               <textarea rows="1" placeholder="Type your message.."></textarea>
             </div>
 
             <div class="newForm-control">
