--- a/webtune/portfolio.html
+++ b/webtune/portfolio.html
@@ -1357,6 +1357,88 @@
 </section>
       </main>
 
+      <footer class="newFooter">
+   <div class="newFooter__content content">
+      <div class="newFooter__logo newFooter__column">
+         <a href="#">
+            <img src="./img/footerLogo.png" alt="logo">
+         </a>
+      </div>
+
+      <div class="newFooter__column">
+         <div class="newFooter__text">
+            Duis aute irure dolor in reprehenderit in voluptate 
+            velit esse cillum dolore eu fugiat nulla pariatur. 
+         </div>
+      </div>
+
+      <div class="newFooter__column">
+         <nav class="newFooter__nav nav">
+            <ul class="menu">
+               <li class="menu-item">
+                  <a href="#">
+                     About Us
+                  </a>
+               </li>
+
+               <li class="menu-item">
+                  <a href="#">
+                     Portfolio
+                  </a>
+               </li>
+
+               <li class="menu-item">
+                  <a href="#">
+                     Blog
+                  </a>
+               </li>
+            </ul>
+         </nav>
+      </div>
+
+      <div class="newFooter__column">
+         <div class="newFooter__contacts">
+            <div class="newFooter__address">
+               <span>Україна</span>
+                  , м.Львів, 
+                  вул. Лазаренка 2
+            </div>
+
+            <div class="newFooter__phone">
+               <a href="tel:+380978577047">+38 (097) 857-70-47</a>
+            </div>
+         </div>
+      </div>
+
+      <div class="newFooter__column">
+         <div class="newFooter__links">
+            <a href="#">
+               <span class="icon-behance"></span>
+            </a>
+
+            <a href="#">
+               <span class="icon-facebook"></span>
+            </a>
+
+            <a href="#">
+               <span class="icon-medium"></span>
+            </a>
+
+            <a href="#">
+               <span class="icon-social"></span>
+            </a>
+         </div>
+      </div>
+   </div>
+
+   <div class="newFooter__content content newFooter__copyright">
+      2021 © WebTune. All Rights Reserved.
+   </div>
+
+   <div class="newFooter__content content newFooter__copyright newFooter__copyright--mobile">
+      © WebTune 2021
+   </div>
+</footer>
       <script src="./js/jquery-3.5.1.min.js"></script>
 <script src="./js/jquery.simplePagination.min.js"></script>
 <script src="./js/slick.min.js"></script>
