added button arrowUp

--- a/webtune/about.html
+++ b/webtune/about.html
@@ -1310,7 +1310,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together...
       </div>
 
       <div class="contactSection__paragraph">
@@ -1333,7 +1333,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message..."></textarea>
             </div>
 
             <div class="newForm-control">
