--- a/webtune/contacts.html
+++ b/webtune/contacts.html
@@ -557,7 +557,7 @@
    </div>
 </header>
 
-      <main class="main portfolio-main">
+      <main class="main contacts-main" name="top" id="top">
          <section class="newSection newHead newPortfolio newContacts">
    <div class="newHead__background newContacts__background">
       <img src="./img/headBackground.png" alt="">
@@ -654,7 +654,9 @@
       </a>
    </div>
 </section>
-         <div class="map" id='map'></div>
+         <div class="map" id='map'>
+            <a href="#top" class="arrowUp"></a>
+         </div>
       </main>
       <script src="https://api.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.js"></script>
       <script>
