--- a/webtune/index.html
+++ b/webtune/index.html
@@ -1893,7 +1893,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together...
       </div>
 
       <div class="contactSection__paragraph">
@@ -1916,7 +1916,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message..."></textarea>
             </div>
 
             <div class="newForm-control">
