--- a/webtune/single-service.html
+++ b/webtune/single-service.html
@@ -1062,7 +1062,7 @@
       </div>
 
       <div class="newServices__heading heading2">
-         Вам також можуть бути цікаві .
+         Вам також можуть бути цікаві ..
       </div>
 
       <ul class="newServices__list">
@@ -1237,7 +1237,7 @@
 
    <div class="newDiscuss__content content">
       <div class="newDiscuss__heading heading-2">
-         Вважають, що це важливо.
+         Вважають, що це важливо..
       </div>
 
       <div class="newDiscuss__paragraph">
@@ -1640,7 +1640,7 @@
       </div>
 
       <div class="contactSection__subHeading">
-         Let's do it together..
+         Let's do it together...
       </div>
 
       <div class="contactSection__paragraph">
@@ -1663,7 +1663,7 @@
             </div>
 
             <div class="newForm-control">
-               <textarea rows="1" placeholder="Type your message.."></textarea>
+               <textarea rows="1" placeholder="Type your message..."></textarea>
             </div>
 
             <div class="newForm-control">
