fixed error chapter 1

--- a/webtune/about.html
+++ b/webtune/about.html
@@ -20,26 +20,26 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/logo.png" alt="logo image">
+            <img src="./img/logo.svg" alt="logo image">
          </a>
       </div>
 
       <nav class="newHeader__nav nav">
          <ul class="nav__list menu">
             <li class="nav__item menu-item">
-               <a href="./about.html">About</a>
+               <a href="./about.html">Про нас</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./portfolio.html">Portfolio</a>
+               <a href="./portfolio.html">Портфоліо</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./contacts.html">Contacts</a>
+               <a href="./contacts.html">Контакти</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./blog.html">Blog</a>
+               <a href="./blog.html">Блог</a>
             </li>
          </ul>
       </nav>
@@ -680,7 +680,7 @@
             <ul class="newTeamMission__list">
                <li class="newTeamMission__item">
                   <div class="newTeamMission__icon">
-                     <img src="" alt="">
+                     <img src="./img/icons/teamMission1.svg" alt="">
                   </div>
 
                   <div class="newTeamMission__title">
@@ -694,7 +694,7 @@
 
                <li class="newTeamMission__item">
                   <div class="newTeamMission__icon">
-                     <img src="" alt="">
+                     <img src="./img/icons/teamMission2.svg" alt="">
                   </div>
 
                   <div class="newTeamMission__title">
@@ -708,7 +708,7 @@
 
                <li class="newTeamMission__item">
                   <div class="newTeamMission__icon">
-                     <img src="" alt="">
+                     <img src="./img/icons/teamMission3.svg" alt="">
                   </div>
 
                   <div class="newTeamMission__title">
@@ -895,7 +895,10 @@
 
          <ul class="newAtWork__list">
             <li class="newAtWork__item">
-               <span class="newAtWork__icon"></span>
+               <span class="newAtWork__icon">
+                  <img src="./img/atWork1.png" alt="">
+               </span>
+
                <div class="newAtWork__title">
                   Lorem ipsum
                </div>
@@ -906,7 +909,10 @@
             </li>
 
             <li class="newAtWork__item">
-               <span class="newAtWork__icon"></span>
+               <span class="newAtWork__icon">
+                  <img src="./img/atWork1.png" alt="">
+               </span>
+
                <div class="newAtWork__title">
                   Lorem ipsum
                </div>
@@ -938,15 +944,22 @@
    </div>
 </section>
       <section class="newPostCarousel">
+   <div class="verticalLines">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+   </div>
+
    <div class="newPostCarousel__content content">
       <div class="newPostCarousel__top">
          <div class="newPostCarousel__left">
             <div class="newPostCarousel__subHeading subHeading">
-               Blog & news
+               БЛОГ & НОВИНИ
             </div>
    
             <div class="newPostCarousel__heading heading-2">
-               You can also <br> read something here
+               Останні новини у Digital сфері
             </div>
    
             <div class="newPostCarousel__link">
