--- a/webtune/single-post.html
+++ b/webtune/single-post.html
@@ -20,26 +20,26 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/logo.png" alt="logo image">
+            <img src="./img/logo.svg" alt="logo image">
          </a>
       </div>
 
       <nav class="newHeader__nav nav">
          <ul class="nav__list menu">
             <li class="nav__item menu-item">
-               <a href="./about.html">About</a>
+               <a href="./about.html">Про нас</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./portfolio.html">Portfolio</a>
+               <a href="./portfolio.html">Портфоліо</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./contacts.html">Contacts</a>
+               <a href="./contacts.html">Контакти</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./blog.html">Blog</a>
+               <a href="./blog.html">Блог</a>
             </li>
          </ul>
       </nav>
