--- a/webtune/single-service.html
+++ b/webtune/single-service.html
@@ -22,26 +22,26 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/logo.png" alt="logo image">
+            <img src="./img/logo.svg" alt="logo image">
          </a>
       </div>
 
       <nav class="newHeader__nav nav">
          <ul class="nav__list menu">
             <li class="nav__item menu-item">
-               <a href="./about.html">About</a>
+               <a href="./about.html">Про нас</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./portfolio.html">Portfolio</a>
+               <a href="./portfolio.html">Портфоліо</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./contacts.html">Contacts</a>
+               <a href="./contacts.html">Контакти</a>
             </li>
 
             <li class="nav__item menu-item">
-               <a href="./blog.html">Blog</a>
+               <a href="./blog.html">Блог</a>
             </li>
          </ul>
       </nav>
@@ -582,13 +582,6 @@
          рекламні кампанії в мережі. 
       </div>
 
-      <div class="newHead__button newButton">
-         <a href="#">
-            <span></span>
-            <span>Про нас</span>
-         </a>
-      </div>
-
       <div class="newHead__links">
          <div class="newHead__newFollow newFollow">
             <div class="newFollow__title">
@@ -663,13 +656,6 @@
    </div>
 </section>
          <section class="section newProcess">
-   <div class="verticalLines">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-   </div>
-
    <div class="newProcess__content content">
       <div class="subHeading newProcess__subHeading">
          Процес роботи
@@ -1268,15 +1254,22 @@
    </div>
 </section>
          <section class="newPostCarousel">
+   <div class="verticalLines">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+   </div>
+
    <div class="newPostCarousel__content content">
       <div class="newPostCarousel__top">
          <div class="newPostCarousel__left">
             <div class="newPostCarousel__subHeading subHeading">
-               Blog & news
+               БЛОГ & НОВИНИ
             </div>
    
             <div class="newPostCarousel__heading heading-2">
-               You can also <br> read something here
+               Останні новини у Digital сфері
             </div>
    
             <div class="newPostCarousel__link">
