--- a/webtune/index.html
+++ b/webtune/index.html
@@ -636,7 +636,7 @@
       </div>
 
       <div class="newHead__scrollDown">
-         <a href="#">Scroll down</a>
+         <a href="#mission">Scroll down</a>
       </div>
 
       <div class="newHead__oneClick oneClick">
@@ -662,7 +662,7 @@
       </a>
    </div>
 </section>
-         <section class="section newMission section">
+         <section class="section newMission section" id="mission">
    <div class="verticalLines">
       <div></div>
       <div></div>
@@ -763,7 +763,7 @@
             <div class="newServices__backgroundColor"></div>
 
             <div class="newServices__icon">
-               <img src="./img/servicesIcon.png" alt="">
+               <img src="./img/icons/servicessIcon.svg" alt="">
             </div>
 
             <div class="newServices__row">
@@ -790,7 +790,7 @@
             <div class="newServices__backgroundColor"></div>
 
             <div class="newServices__icon">
-               <img src="./img/servicesIcon.png" alt="">
+               <img src="./img/icons/servicessIcon.svg" alt="">
             </div>
 
             <div class="newServices__row">
@@ -817,7 +817,7 @@
             <div class="newServices__backgroundColor"></div>
 
             <div class="newServices__icon">
-               <img src="./img/servicesIcon.png" alt="">
+               <img src="./img/icons/servicessIcon.svg" alt="">
             </div>
 
             <div class="newServices__row">
@@ -844,7 +844,7 @@
             <div class="newServices__backgroundColor"></div>
 
             <div class="newServices__icon">
-               <img src="./img/servicesIcon.png" alt="">
+               <img src="./img/icons/servicessIcon.svg" alt="">
             </div>
 
             <div class="newServices__row">
@@ -871,7 +871,7 @@
             <div class="newServices__backgroundColor"></div>
 
             <div class="newServices__icon">
-               <img src="./img/servicesIcon.png" alt="">
+               <img src="./img/icons/servicessIcon.svg" alt="">
             </div>
 
             <div class="newServices__row">
@@ -898,7 +898,7 @@
             <div class="newServices__backgroundColor"></div>
 
             <div class="newServices__icon">
-               <img src="./img/servicesIcon.png" alt="">
+               <img src="./img/icons/servicessIcon.svg" alt="">
             </div>
 
             <div class="newServices__row">
