--- a/webtune/portfolio.html
+++ b/webtune/portfolio.html
@@ -602,7 +602,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -644,7 +645,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -686,7 +688,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -734,7 +737,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -776,7 +780,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -818,7 +823,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -860,7 +866,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -902,7 +909,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
@@ -950,7 +958,8 @@
                   </ul>
 
                   <h2 class="newPortfolio__title">
-                     Вебсайт для “AKVAREL Drawing Studio”
+                     <span>Вебсайт для</span>
+                     <span>“AKVAREL Drawing Studio”</span>
                   </h2>
 
                   <div class="newPortfolio__paragraph">
