--- a/webtune/about.html
+++ b/webtune/about.html
@@ -20,7 +20,7 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/logo.svg" alt="logo image">
+            <img src="./img/Logo.svg" alt="logo image">
          </a>
       </div>
 
