--- a/webtune/contacts.html
+++ b/webtune/contacts.html
@@ -587,7 +587,10 @@
             <a href="tel:380689167037">+380 68 916 70 37</a>
          </div>
 
-         <div class="newContacts__row">
+         <div class="newContacts__row newContacts__address">
+            <div class="newContacts__title subHeading">
+               Address
+            </div>
             <div class="newContacts__title subHeading">
                Відвідайте нас
             </div>
