--- a/webtune/portfolio.html
+++ b/webtune/portfolio.html
@@ -704,6 +704,17 @@
                      </a>
                   </div>
                </li>
+
+               
+
+               <div class="newPortfolio__mobileArrows">
+                  <a href="#" class="newPortfolio__prevArrow">
+                     Prev page
+                  </a>
+                  <a href="#" class="newPortfolio__nextArrow">
+                     Next page
+                  </a>
+               </div>
             </ul>
          </li>
 
@@ -925,6 +936,15 @@
                      </a>
                   </div>
                </li>
+
+               <div class="newPortfolio__mobileArrows">
+                  <a href="#" class="newPortfolio__prevArrow">
+                     Prev page
+                  </a>
+                  <a href="#" class="newPortfolio__nextArrow">
+                     Next page
+                  </a>
+               </div>
             </ul>
          </li>
 
@@ -1100,6 +1120,15 @@
                      </a>
                   </div>
                </li>
+
+               <div class="newPortfolio__mobileArrows">
+                  <a href="#" class="newPortfolio__prevArrow">
+                     Prev page
+                  </a>
+                  <a href="#" class="newPortfolio__nextArrow">
+                     Next page
+                  </a>
+               </div>
             </ul>
          </li>
 
@@ -1358,7 +1387,6 @@
                      </a>
                   </div>
                </li>
-               
 
                <li class="newPortfolio__subMenu-item">
                   <span>02</span>
@@ -1569,6 +1597,15 @@
                      </a>
                   </div>
                </li>
+
+               <div class="newPortfolio__mobileArrows">
+                  <a href="#" class="newPortfolio__prevArrow">
+                     Prev page
+                  </a>
+                  <a href="#" class="newPortfolio__nextArrow">
+                     Next page
+                  </a>
+               </div>
             </ul>
          </li>
       </ul>
