--- a/webtune/index.html
+++ b/webtune/index.html
@@ -1942,7 +1942,7 @@
    <div class="newFooter__content content">
       <div class="newFooter__logo newFooter__column">
          <a href="#">
-            <img src="./img/footerLogo.png" alt="logo">
+            <img src="./img/footerLogo.svg" alt="logo">
          </a>
       </div>
 
