added photo to portfolio nav

--- a/webtune/index.html
+++ b/webtune/index.html
@@ -1078,8 +1078,8 @@
    </div>
 
    <div class="newPortfolioNav__background">
-      <img src="./img/portfolioNavigationBg.png" alt="">
-      <img src="./img/portfolioNavigationBg2.png" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
    </div>
 
    <div class="newPortfolioNav__content content">
@@ -1120,7 +1120,7 @@
                      </span>
                   </a>
 
-                  <img src="" alt="">
+                  <img src="./img/portfolioNavigationBg.png" alt="">
                </div>
 
                <ul class="sub-menu">
@@ -1135,6 +1135,8 @@
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg2.png" alt="">
                      </li>
 
                      <li class="sub-menu__item">
@@ -1147,6 +1149,8 @@
                               consectetur adipiscing elit. 
                            </span>
                         </a>
+
+                        <img src="./img/zdraste.jpg" alt="">
                      </li>
 
                      <li class="sub-menu__item">
@@ -1242,7 +1246,7 @@
                      </span>
                   </a>
 
-                  <img src="" alt="">
+                  <img src="./img/mob.png" alt="">
                </div>
 
                <ul class="sub-menu">
