--- a/webtune/index.html
+++ b/webtune/index.html
@@ -22,7 +22,7 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/Logo.svg" alt="logo image">
+            <img src="./img/Logo_WebTune.svg" alt="logo image">
          </a>
       </div>
 
@@ -1164,6 +1164,8 @@
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg.png" alt="">
                      </li>
 
                      <li class="sub-menu__item">
@@ -1176,6 +1178,8 @@
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg.png" alt="">
                      </li>
 
                      <li class="sub-menu__item">
@@ -1189,6 +1193,8 @@
                               consectetur adipiscing elit. 
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg.png" alt="">
                      </li>
 
                      <li class="sub-menu__item">
@@ -1201,6 +1207,8 @@
                               consectetur adipiscing elit. 
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg.png" alt="">
                      </li>
    
                      <li class="sub-menu__item">
@@ -1213,6 +1221,8 @@
                               consectetur adipiscing elit. 
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg.png" alt="">
                      </li>
    
                      <li class="sub-menu__item">
@@ -1226,6 +1236,8 @@
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
                            </span>
                         </a>
+
+                        <img src="./img/portfolioNavigationBg.png" alt="">
                      </li>
    
                      <a href="#">VIEW ALL</a>
@@ -1261,6 +1273,8 @@
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                         </span>
                      </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
                   </li>
 
                   <li class="sub-menu__item">
@@ -1274,6 +1288,8 @@
                            consectetur adipiscing elit. 
                         </span>
                      </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
                   </li>
 
                   <li class="sub-menu__item">
@@ -1286,6 +1302,8 @@
                            consectetur adipiscing elit. 
                         </span>
                      </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
                   </li>
 
                   <li class="sub-menu__item">
@@ -1298,6 +1316,8 @@
                            consectetur adipiscing elit. 
                         </span>
                      </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
                   </li>
 
                   <li class="sub-menu__item">
@@ -1311,6 +1331,8 @@
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
                         </span>
                      </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
                   </li>
 
                   <a href="#">VIEW ALL</a>
@@ -1335,70 +1357,79 @@
                </div>
 
                <ul class="sub-menu">
-                     <li class="sub-menu__item">
-                        <a href="#">
-                           <span>
-                              Zarva create. Site & Adaptive 
-                              version for “Truskavetska” 
-                           </span>
-                           <span>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                           </span>
-                        </a>
-                     </li>
+                  <li class="sub-menu__item">
+                     <a href="#">
+                        <span>
+                           Zarva create. Site & Adaptive 
+                           version for “Truskavetska” 
+                        </span>
+                        <span>
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        </span>
+                     </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
+                  </li>
+
+                  <li class="sub-menu__item">
+                     <a href="#">
+                        <span>
+                           UI   UX  Design. Site & Adaptive version 
+                           for “Truskavetska” 
+                        </span>
+                        <span>
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
+                        </span>
+                     </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
+                  </li>
+
+                  <li class="sub-menu__item">
+                     <a href="#">
+                        <span>
+                           Mobile App for “Clearmove”
+                        </span>
+                        <span>
+                           Lorem ipsum dolor sit amet, 
+                           consectetur adipiscing elit. 
+                        </span>
+                     </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
+                  </li>
    
-                     <li class="sub-menu__item">
-                        <a href="#">
-                           <span>
-                              UI   UX  Design. Site & Adaptive version 
-                              for “Truskavetska” 
-                           </span>
-                           <span>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
-                           </span>
-                        </a>
-                     </li>
+                  <li class="sub-menu__item">
+                     <a href="#">
+                        <span>
+                           Mobile App for “Clearmove”
+                        </span>
+                        <span>
+                           Lorem ipsum dolor sit amet, 
+                           consectetur adipiscing elit. 
+                        </span>
+                     </a>
+
+                     <img src="./img/portfolioNavigationBg.png" alt="">
+                  </li>
    
-                     <li class="sub-menu__item">
-                        <a href="#">
-                           <span>
-                              Mobile App for “Clearmove”
-                           </span>
-                           <span>
-                              Lorem ipsum dolor sit amet, 
-                              consectetur adipiscing elit. 
-                           </span>
-                        </a>
-                     </li>
-   
-                     <li class="sub-menu__item">
-                        <a href="#">
-                           <span>
-                              Mobile App for “Clearmove”
-                           </span>
-                           <span>
-                              Lorem ipsum dolor sit amet, 
-                              consectetur adipiscing elit. 
-                           </span>
-                        </a>
-                     </li>
-   
-                     <li class="sub-menu__item">
-                        <a href="#">
-                           <span>
-                              UI UX Design. Site & Adaptive version for 
-                              “Truskavetska” 
-                           </span>
-                           <span>
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
-                           </span>
-                        </a>
-                     </li>
-   
-                     <a href="#">VIEW ALL</a>
+                  <li class="sub-menu__item">
+                     <a href="#">
+                        <span>
+                           UI UX Design. Site & Adaptive version for 
+                           “Truskavetska” 
+                        </span>
+                        <span>
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
+                        </span>
+                     </a>
+                     <img src="./img/portfolioNavigationBg.png" alt="">
+                  </li>
+
+                  <a href="#">VIEW ALL</a>
                </ul>
             </li>
 
