--- a/webtune/single-service.html
+++ b/webtune/single-service.html
@@ -22,7 +22,7 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/Logo.svg" alt="logo image">
+            <img src="./img/Logo_WebTune.svg" alt="logo image">
          </a>
       </div>
 
