fixed header and footer in case page

--- a/webtune/about.html
+++ b/webtune/about.html
@@ -72,7 +72,7 @@
                <li class="bigNav__item menu-item">
                   <span></span>
                   <a href="#">Website Development</a>
-                  <img src="./img/smm.png" alt="">
+                  <img src="./img/bigMenuBg.png" alt="">
 
                   <ul class="sub-menu">
                      <div class="sub-menu__back">
