fixed logo img on case page

--- a/webtune/case.html
+++ b/webtune/case.html
@@ -25,7 +25,7 @@
    <div class="newHeader__content content">
       <div class="newHeader__logo">
          <a href="./index.html">
-            <img src="./img/Logo_WebTune2.svg" alt="logo image">
+            <img src="./img/Logo_WebTune2.svg" alt="logo image" class="img-svg">
          </a>
       </div>
 
